feat: add admin activity center
